--- a/23.10.24/23.10.24.vcxproj
+++ b/23.10.24/23.10.24.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="VectorDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.hpp" />
