--- a/23.10.24/23.10.24.vcxproj
+++ b/23.10.24/23.10.24.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="Hand.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VectorDemo.cpp" />
   </ItemGroup>
