--- a/23.10.24/23.10.24.vcxproj.filters
+++ b/23.10.24/23.10.24.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="VectorDemo.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Hand.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.hpp">
